servers/at2-server/apps/home-assistant/ingress_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`at2-home-assistant.dominikaschbacher.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    certResolver: letsencrypt
